2005-11-21  Atsushi Enomoto  <atsushi@ximian.com>

	* CP949.cs : UHC level 2 base number is wrong.
	  Fixed bug #76760 Patch by Hye-Shik Chang.

2005-11-16  Atsushi Enomoto  <atsushi@ximian.com>

	* GB18030Encoding.cs : check GB2312 first, and then check GB18030.
	  Fixed GB18030 part of bug #76722.

2005-11-16  Atsushi Enomoto  <atsushi@ximian.com>

	* GB2312Convert.cs , CP936.cs, GB18030Encoding.cs : don't handle
	  single byte characters in UcsToGbk. Fixed GB2312 part of #76722.

2005-11-01  Atsushi Enomoto  <atsushi@ximian.com>

	* CP949.cs : Now it contains both CP949 (UHC) and CP51949 (EUC) for
	  Korean encoding. This should fix bug #76588.

2005-09-25  Atsushi Enomoto  <atsushi@ximian.com>

	* I18N.CJK.dll.sources : needs fix as well.

2005-09-25  Atsushi Enomoto  <atsushi@ximian.com>

	* CP50221.cs,
	  ISO2022JP.cs :
	  So, now "CP50221.cs" is improper, since it contains all 50220-50222.

2005-09-25  Atsushi Enomoto  <atsushi@ximian.com>

	* CP50221.cs : actually 50220 and 50222 are also iso-2022-jp encodings.
	  Fixed bug #76139. This file is likely to be renamed.

2005-09-18  Atsushi Enomoto  <atsushi@ximian.com>

	* CP50221.cs, GB18030Encoding.cs : because of silly design
	  Common/Manager expects fixed class names CPxxxxx. Fixed bug #76139.

2005-08-22  Raja R Harinath  <rharinath@novell.com>

	* Makefile (EXTRA_DISTFILES): Add README.gb18030 and gb18030.table.

2005-08-19  Atsushi Enomoto  <atsushi@ximian.com>

	why didn't we have it? ;-)

	* README.gb18030,
	  gb18030.table,
	  GB18030Encoding.cs,
	  GB18030Source.cs,
	  Makefile,
	  I18N.CJK.dll.sources : added support for GB18030 encoding.
	* Gb2312Convert.cs : added utility conversion methods.